--- a/kubernetes/secret.yaml
+++ b/kubernetes/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-idle-monitor-secret
+  namespace: your-namespace
 type: Opaque
 data:
   POSTGRES_USER: your_base64_encoded_user
