--- a/kubernetes/templates/deployment.yaml
+++ b/kubernetes/templates/deployment.yaml
@@ -31,6 +31,8 @@ spec:
           value: {{ .Values.postgres.user | quote }}
         - name: POSTGRES_PASSWORD
           value: {{ .Values.postgres.password | quote }}
+        - name: POSTGRES_USERNAME
+          value: {{ .Values.postgres.usename | quote }}
         - name: LOG_LEVEL
           value: {{ .Values.logLevel | quote }}
         volumeMounts:
